--- a/attendance/templates/client/base.html
+++ b/attendance/templates/client/base.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Face Attendance</title>
+  {% block css %}{% endblock %}
+  {% block scripts %}{% endblock %}
 </head>
 <body>
-
+  {% block body %}{% endblock %}
 </body>
 </html>
