--- a/attendance/templates/client/home.html
+++ b/attendance/templates/client/home.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-  <h1>Ami idhar ho!</h1>
-</body>
-</html>
+{% include('client/base.html') %}
+
+{% block body %}
+  <P>Kire bap</P>
+{% endblock %}
