Change some settings for static files

--- a/attendance/templates/client/base.html
+++ b/attendance/templates/client/base.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Face Attendance</title>
+  <link rel="stylesheet" href="{{ static('css/client/base.css') }}">
   {% block css %}{% endblock %}
   {% block scripts %}{% endblock %}
 </head>
 <body>
+  <div class="navbar">
+    ppp
+  </div>
   {% block body %}{% endblock %}
 </body>
 </html>
