--- a/attendance/templates/client/base.html
+++ b/attendance/templates/client/base.html
@@ -9,9 +9,16 @@
   {% block scripts %}{% endblock %}
 </head>
 <body>
-  <div class="navbar">
-    ppp
+  <div class="navbar-wrapper">
+    <div class="navbar">
+      <li class="left">
+        Logout
+      </li>
+      <li class="right">
+        Logout
+      </li>
+    </div>
   </div>
-  {% block body %}{% endblock %}
+  {% block content %}{% endblock %}
 </body>
 </html>
