--- a/attendance/templates/client/home.html
+++ b/attendance/templates/client/home.html
@@ -1,5 +1,9 @@
 {% include('client/base.html') %}
 
-{% block body %}
-  <P>Kire bap</P>
+{% block content %}
+  <div class="content">
+    {% for i in range(100) %}
+      <p> Pera nai </p>
+    {% endfor %}
+  </div>
 {% endblock %}
