--- a/attendance/static/css/client/base.css
+++ b/attendance/static/css/client/base.css
@@ -1,4 +1,42 @@
-.navbar {
-   background-color: grey;
-   height: 100px;
+body {
+   max-width: 1024px;
+   margin: 0 auto;
+}
+
+.navbar-wrapper {
+   background-color: #f0f2f5;
+   position: fixed;
+   width: 100%;
+   left: 0;
+   right: 0;
+   top: 0px;
+   z-index: 100;
+}
+
+.navbar-wrapper .navbar {
+    display: block;
+    margin: 0 auto;
+    width: 1024px;
+    font-size: 20px;
+}
+
+.navbar .left{
+    float: left;
+    display: inline-block;
+    margin-right: 10px;
+    padding: 1.5em 0;
+    border: 2px;
+}
+
+.navbar .right{
+    float: right;
+    display: inline-block;
+    margin-left: 10px;
+    padding: 1.5em 0;
+    border: 2px;
+}
+
+.content {
+    top: 100px;
+    position: relative;
 }
