--- a/attendance/templates/client/home.html
+++ b/attendance/templates/client/home.html
@@ -2,8 +2,11 @@
 
 {% block content %}
   <div class="content">
-    {% for i in range(100) %}
-      <p> Pera nai </p>
-    {% endfor %}
+    <div style="top: 100px;">
+      <p><b>Your courses as a teacher or supervisor:</b></p>
+    </div>
+    <div style="top: 200px;">
+      <p><b>Your courses as a student:</b></p>
+    </div>
   </div>
 {% endblock %}
