--- a/attendance/templates/client/login.html
+++ b/attendance/templates/client/login.html
@@ -9,7 +9,19 @@
 
 <body>
     <div class="container">
-         <!-- Navbar template here -->
+         <!-- Navbar here -->
+         <div class="navbar-wrapper">
+            <div class="navbar">
+                <li class="left">
+                    <h1>ATTENDANCE</h1>
+                </li>
+                <li class="right">
+                    <a href="https://github.com/mahbubcseju" class="no-line">Sign Up</a>
+                </li>
+            </div>
+         </div>
+
+	<!-- Login here -->
         <div class="login-container">
             <div class="header">
                 <H1>Sign in to Face Attendence</H1>
