--- a/attendance/templates/client/sign-up.html
+++ b/attendance/templates/client/sign-up.html
@@ -10,6 +10,18 @@
 <body>
     <div class="container">
          <!-- Navbar template here -->
+         <div class="navbar-wrapper">
+            <div class="navbar">
+                <li class="left">
+                    <h1>ATTENDANCE</h1>
+                </li>
+                <li class="right">
+                    <a href="https://github.com/mahbubcseju" class="no-line">Login</a>
+                </li>
+            </div>
+          </div>
+
+         <!-- login container -->
         <div class="login-container">
             <div class="header">
                 <h1>Welcome to Face Attendence</h1>
