--- a/attendance/templates/client/login.html
+++ b/attendance/templates/client/login.html
@@ -1,21 +1,29 @@
 {% include('client/base.html') %}
 
+{% block css %}
+  <link rel="stylesheet" href="{{ static('css/client/login.css') }}">
+
+{% endblock %}
+
+
 {% block content %}
   <div class="content">
     <form method="post" action="{{ url('Login') }}">
       {% for field in form %}
         <p>
+          <h1></h1>
           {{ field.label_tag() }}<br>
           {{ field }}
           {% if field.help_text %}
-            <small style="color: grey">{{ field.help_text }}</small>
+            <small style="color: red">{{ field.help_text }}</small>
           {% endif %}
           {% for error in field.errors %}
             <p style="color: red">{{ error }}</p>
           {% endfor %}
+
         </p>
       {% endfor %}
-      <button type="submit">Sign up</button>
+      <button type="submit" class="shamim">Sign up</button>
       <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
       </form>
   </div>
