--- a/attendance/templates/client/sign_up.html
+++ b/attendance/templates/client/sign_up.html
@@ -1,5 +1,13 @@
 {% include('client/base.html') %}
 
+{% block css %}
+
+  <link rel="stylesheet" href="{{ static('css/client/sign_up.css') }}">
+
+{% endblock %}
+
+
+
 {% block content %}
   <div class="content">
     <form method="post" action="{{ url('SignUp') }}">
@@ -7,9 +15,6 @@
         <p>
           {{ field.label_tag() }}<br>
           {{ field }}
-          {% if field.help_text %}
-            <small style="color: grey">{{ field.help_text }}</small>
-          {% endif %}
           {% for error in field.errors %}
             <p style="color: red">{{ error }}</p>
           {% endfor %}
@@ -17,6 +22,7 @@
       {% endfor %}
       <button type="submit">Sign up</button>
       <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+
       </form>
   </div>
 {% endblock %}
