--- a/attendance/templates/client/sign_up.html
+++ b/attendance/templates/client/sign_up.html
@@ -1,18 +1,18 @@
 {% include('client/base.html') %}
 
+{% block css %}
+  super()
+{% endblock %}
+
 {% block content %}
   <div class="content">
     <form method="post" action="{{ url('SignUp') }}">
       {% for field in form %}
         <p>
-          {{ field.label_tag() }}<br>
+          {{ field.errors }}
+          {{ field.label_tag() }}
           {{ field }}
-          {% if field.help_text %}
-            <small style="color: grey">{{ field.help_text }}</small>
-          {% endif %}
-          {% for error in field.errors %}
-            <p style="color: red">{{ error }}</p>
-          {% endfor %}
+          <span class="helptext">{{ field.help_text|safe }}</span>
         </p>
       {% endfor %}
       <button type="submit">Sign up</button>
