--- a/attendance/templates/client/sign_up.html
+++ b/attendance/templates/client/sign_up.html
@@ -1,22 +1,25 @@
-{% include('client/base.html') %}
+{% extends('client/base.html') %}
 
 {% block css %}
-  super()
+  {{ super() }}
+  <link rel="stylesheet" href="{{ static('css/client/sign_up.css') }}">
 {% endblock %}
 
 {% block content %}
   <div class="content">
-    <form method="post" action="{{ url('SignUp') }}">
-      {% for field in form %}
-        <p>
-          {{ field.errors }}
-          {{ field.label_tag() }}
-          {{ field }}
-          <span class="helptext">{{ field.help_text|safe }}</span>
-        </p>
-      {% endfor %}
-      <button type="submit">Sign up</button>
-      <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
+    <div class="card">
+      <form method="post" action="{{ url('SignUp') }}">
+        {% for field in form %}
+          <p>
+            {{ field.errors }}
+            {{ field.label_tag() }}
+            {{ field }}
+            <span class="helptext">{{ field.help_text|safe }}</span>
+          </p>
+        {% endfor %}
+        <button type="submit">Sign up</button>
+        <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
       </form>
+    </div>
   </div>
 {% endblock %}
