--- a/attendance/templates/client/login.html
+++ b/attendance/templates/client/login.html
@@ -1,18 +1,19 @@
-{% include('client/base.html') %}
+{% extends('client/base.html') %}
+
+{% block css %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ static('css/client/login.css') }}">
+{% endblock %}
 
 {% block content %}
   <div class="content">
     <form method="post" action="{{ url('Login') }}">
       {% for field in form %}
         <p>
-          {{ field.label_tag() }}<br>
+          {{ field.errors }}
+          {{ field.label_tag() }}
           {{ field }}
-          {% if field.help_text %}
-            <small style="color: grey">{{ field.help_text }}</small>
-          {% endif %}
-          {% for error in field.errors %}
-            <p style="color: red">{{ error }}</p>
-          {% endfor %}
+          <span class="helptext">{{ field.help_text|safe }}</span>
         </p>
       {% endfor %}
       <button type="submit">Sign up</button>
