--- a/attendance/static/css/client/home.css
+++ b/attendance/static/css/client/home.css
@@ -1,3 +1,16 @@
 .card {
-    margin: 2em;
+    margin: 10%;
+}
+
+.courses {
+    border: 1px solid grey;
+}
+
+.add-course {
+    text-align: right;
+}
+
+.call-dialog {
+    background-color: green;
+    border-radius: 20px;
 }
