--- a/attendance/static/css/client/home.css
+++ b/attendance/static/css/client/home.css
@@ -3,6 +3,7 @@
 }
 
 .courses {
+    text-align: center;
     border: 1px solid grey;
 }
 
@@ -13,4 +14,12 @@
 .call-dialog {
     background-color: green;
     border-radius: 20px;
+}
+
+.course {
+    border-radius: 20px;
+    display: inline-block;
+    background-color: grey;
+    margin: 0.5em;
+    padding: 0.2em 0.5em;
 }
