--- a/attendance/templates/client/home.html
+++ b/attendance/templates/client/home.html
@@ -14,6 +14,11 @@
           <button class="call-dialog">
             Add a new course</button>
         </div>
+
+        {% for course in courses %}
+          <div class="course">{{ course.name }}</div>
+        {% endfor %}
+
       </div>
     </div>
   </div>
