--- a/attendance/templates/client/course_detail.html
+++ b/attendance/templates/client/course_detail.html
@@ -18,13 +18,14 @@
         </button>
         <br><br>
       </div>
+      <div style="text-align: left; margin-left: 5%;">Student Info</div>
       <div class="course">
-        <div style="text-align: left; margin-left: 10px;">Student Info</div>
         <table>
           <thead>
             <tr>
               <th>Name</th>
               <th>Username</th>
+              <th>Status</th>
               <th>Percentage</th>
             </tr>
           </thead>
@@ -33,6 +34,15 @@
             <tr>
               <td>{{ student.user.first_name }}</td>
               <td>{{ student.user.username }}</td>
+              <td>
+                {% if not student.status %}
+                  Pending
+                {% elif student.status == 1 %}
+                  Joined
+                {% else %}
+                  Rejected
+                {% endif %}
+              </td>
               <td>{{ student.user.username }}</td>
             </tr>
           {% endfor %}
