--- a/attendance/static/css/client/course_detail.css
+++ b/attendance/static/css/client/course_detail.css
@@ -1,10 +1,16 @@
 .card {
-    margin: 10%;
+    margin: 5%;
 }
 
 .course {
     text-align: center;
     border: 1px solid grey;
+}
+
+.course-name {
+  font-size: 1.2em;
+  text-align: center;
+  border-bottom: 1px solid grey;
 }
 
 .add-student {
@@ -23,7 +29,7 @@
 }
 
 table {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
