--- a/attendance/static/css/client/course_detail.css
+++ b/attendance/static/css/client/course_detail.css
@@ -8,7 +8,7 @@
 }
 
 .course-name {
-  font-size: 1.2em;
+  font-size: 2em;
   text-align: center;
   border-bottom: 1px solid grey;
 }
@@ -43,4 +43,9 @@ tbody tr:nth-child(even) {
 
 tbody tr:nth-child(odd) {
   background: #e6f2ff;
+}
+
+.start-attendance {
+    text-align: left;
+    margin: 5%;
 }
