Added attendance part

--- a/attendance/templates/client/course_detail.html
+++ b/attendance/templates/client/course_detail.html
@@ -119,6 +119,10 @@
       alertify.success('Student added succfully.');
     {% endif %}
 
+    {% if request.session.pop('start-attendance', False) %}
+      alertify.success('Attendance timer started.');
+    {% endif %}
+
   });
 
   $(function() {
