--- a/attendance/templates/client/register_image.html
+++ b/attendance/templates/client/register_image.html
@@ -8,7 +8,7 @@
 {% block content %}
   <div class="content">
     <div class="card">
-      <form method="post" action="{{ url('Login') }}">
+      <form method="post" enctype="multipart/form-data">
       {% for field in form %}
         <p>
           {{ field.errors }}
@@ -17,7 +17,7 @@
           <span class="helptext">{{ field.help_text|safe }}</span>
         </p>
       {% endfor %}
-      <button type="submit">Sign up</button>
+      <button type="submit">Submit</button>
       <input type="hidden" name="csrfmiddlewaretoken" value="{{ csrf_token }}">
       </form>
     </div>
